# MODULE.bazel

module(
    name = "github.com/copyl-sys/hanoivm",
    version = "0.1.0",
)

# Common utility library for Bazel modules
bazel_dep(name = "bazel_skylib", version = "1.0.3")

# Rules for building Rust code (required since the project includes a Cargo.toml)
bazel_dep(name = "io_bazel_rules_rust", version = "0.29.0")

# Optional: Rules for handling foreign (C/C++) code, which might help when building components
bazel_dep(name = "rules_foreign_cc", version = "0.2.0")
